[package]
name = "rust-rpg-cursive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend", "toml"]

# [dependencies.pdcurses-sys]
# version = "0.7.1"
# features = ["win32"]

# ^ Uncomment when building for Windows